--- a/index.html
+++ b/index.html
@@ -18,26 +18,26 @@
     </div>
     <div>
       <img src="images/img-1.png" alt="" />
-      <small> Charmandar </small>
+      <!-- <small> Charmandar </small> -->
     </div>
     <div>
       <img src="images/img-2.png" alt="" />
-      <small> Arbok </small>
+      <!-- <small> Arbok </small> -->
     </div>
     <div>
       <img src="images/img-3.png" alt="" />
-      <small> Pikachu </small>
+      <!-- <small> Pikachu </small> -->
     </div>
     <div>
       <img src="images/img-4.png" alt="" />
-      <small> Mew </small>
+      <!-- <small> Mew </small> -->
     </div>
     <div>
       <img src="images/img-5.png" alt="" />
-      <small> Darkrai </small>
+      <!-- <small> Darkrai </small> -->
     </div>
     <div class="hard"></div>
-    <div class="hard">Thank You <small>~ HankTheTank</small></div>
+    <div class="hard">Amo você <small>~ seu João &hearts; </small></div>
   </div>
 
   <script src="jquery.js"></script>
